@@ -12,16 +12,14 @@
 \item[-rot ( a b c -- c a b )] rot rot
 \item[2drop ( a b -- )] Drop two topmost stack elements.
 \item[2dup ( a b -- a b a b )] Duplicate two topmost stack elements.
-\item[2over ( a b c d -- a b c d a b )] Copies cell pair a b to top of stack.
-\item[2swap ( a b c d -- c d a b )] Exchanges the top two cell pairs.
 \item[?dup ( a -- a a? )] Dup a if a differs from 0.
 \item[nip ( a b -- b )] swap drop
 \item[tuck ( a b -- b a b )] dup -rot
 \item[pick ( $x_u$ ... $x_1$ $x_0$ $u$ -- $x_u$ ... $x_1$ $x_0$ $x_u$ )]
 Pick from stack element with depth u to top of stack.
-\item[$>$r ( a -- )] Move value from top of parameter stack to top of return stack. 
-\item[r$>$ ( -- a )] Move value from top of return stack to top of parameter stack. 
-\item[r@ ( -- a )] Copy value from top of return stack to top of parameter stack. 
+\item[$>$r ( a -- )] Move value from top of parameter stack to top of return stack.
+\item[r$>$ ( -- a )] Move value from top of return stack to top of parameter stack.
+\item[r@ ( -- a )] Copy value from top of return stack to top of parameter stack.
 \item[depth ( -- n)] \texttt{n} is the number of single-cell values contained in the data stack before \texttt{n} was placed on the stack.
 
 \item[lsb ( -- addr)] The top address of the LSB parameter stack.
@@ -85,7 +83,7 @@ These words assume that the lowest number is 0 and highest is FFFF.
 
 \section{Double}
 
-The following words use double-cell integers. On the stack, the cell containing the most significant part of a double-cell integer is above the cell containing the least significant part. 
+The following words use double-cell integers. On the stack, the cell containing the most significant part of a double-cell integer is above the cell containing the least significant part.
 
 \begin{description}
 \item[dabs ( d -- ud )] Produces the absolute value of d.
@@ -105,22 +103,22 @@ The following words use double-cell integers. On the stack, the cell containing 
 \item[0$<>$ ( a -- flag )] Is a not equal to 0?
 \item[= ( a b -- flag )] Is a equal to b?
 \item[$<>$ ( a b -- flag )] Does a differ from b?
-\item[and ( a b -- c )] Binary and.  
-\item[or ( a b -- c )] Binary or.  
-\item[xor ( a b -- c )] Binary exclusive or.  
-\item[invert ( a -- b )] Flip all bits of a.  
+\item[and ( a b -- c )] Binary and.
+\item[or ( a b -- c )] Binary or.
+\item[xor ( a b -- c )] Binary exclusive or.
+\item[invert ( a -- b )] Flip all bits of a.
 \end{description}
 
 \section{Memory}
 
 \begin{description}
-\item[! ( value address -- )] Store 16-bit value at address.  
-\item[@ ( address -- value )] Fetch 16-bit value from address.  
-\item[c! ( value address -- )] Store 8-bit value at address.  
+\item[! ( value address -- )] Store 16-bit value at address.
+\item[@ ( address -- value )] Fetch 16-bit value from address.
+\item[c! ( value address -- )] Store 8-bit value at address.
 \item[c@ ( address -- value )] Fetch 8-bit value from address.
 \item[fill ( addr len char -- )] Fill range [addr, len + addr) with char.
 \item[move ( src dst len -- )]
-Copies a region of memory \texttt{len} bytes long, starting at \texttt{src}, to emory beginning at \texttt{dst}. 
+Copies a region of memory \texttt{len} bytes long, starting at \texttt{src}, to emory beginning at \texttt{dst}.
 
 \end{description}
 \section{Compiling}
@@ -140,12 +138,12 @@ Copies a region of memory \texttt{len} bytes long, starting at \texttt{src}, to 
 \item[immediate] Mark the most recently defined word as immediate (i.e. inside colon definitions, it will be executed immediately instead of compiled).
 \item[{[']} name ( -- xt )] Place name's execution token xt on the stack. The execution token returned by the compiled phrase \texttt{['] x} is the same value returned by \texttt{' x} outside of compilation state. Typical use: \texttt{: x ... {[}'{]} name ... ;}
 \item[compile, ( xt -- )] Append \texttt{jsr xt} to the word being compiled. Typical use: \texttt{: recurse immed latest @ >cfa compile, ;}
-\item[postpone xxx] Compile the compilation semantics (instead of interpretation semantics) of xxx. Typical use: 
+\item[postpone xxx] Compile the compilation semantics (instead of interpretation semantics) of xxx. Typical use:
 \begin{verbatim}
 : endif postpone then ; immediate
 : x ... if ... endif ... ;
 \end{verbatim}
-\item[header xxx] Create a dictionary header with name \texttt{xxx}. 
+\item[header xxx] Create a dictionary header with name \texttt{xxx}.
 \item[create xxx/does$>$] Create a word creating word \texttt{xxx} with custom behavior
 specified after \texttt{does$>$}. For further description, see "Starting Forth."
 \item[$>$body ( xt -- addr )] Returns the data field address that belongs to the execution token. Example use: \texttt{' foo >body}
@@ -158,7 +156,7 @@ specified after \texttt{does$>$}. For further description, see "Starting Forth."
 \subsection{Values}
 
 Values are fast to read, slow to write. Use values for variables
-that are rarely changed. 
+that are rarely changed.
 
 \begin{description}
 \item[1 value foo] Create value foo and set it to 1.
@@ -305,7 +303,7 @@ Print a string. Example: \texttt{.( foo)}
 
 Compile-time version of "\texttt{.(}". Example: \texttt{: foo ." bar" ;}
 
-\item[s" ( -- strptr strlen )] Define a string. Example: \texttt{s" foo"}. 
+\item[s" ( -- strptr strlen )] Define a string. Example: \texttt{s" foo"}.
 
 \item[count ( str -- caddr u )] Returns data address and length of the counted string str.
 
@@ -391,6 +389,8 @@ The \texttt{compat} module contains various words that are not deemed necessary 
     \item[chars ( -- )] No-op
     \item[2@ ( address -- x1 x2 )] Fetch 32-bit value from address. x2 is stored at address, and x1 is stored at address + 2.
     \item[2! ( x1 x2 address -- )] Store 32-bit value to address. x2 is stored at address, and x1 is stored at address + 2.
+    \item[2over ( a b c d -- a b c d a b )] Copies cell pair a b to top of stack.
+    \item[2swap ( a b c d -- c d a b )] Exchanges the top two cell pairs.
     \item[$>$number ( ud addr u -- ud addr2 u2 )] Converts the string in \texttt{addr u} to digits, using \texttt{BASE}, and adds each digit into ud after multiplying it with \texttt{BASE}. \texttt{addr2 u2} contains the part of the string that was not converted.
     \item[sm/rem ( d n -- r q )] Divide double-cell number d by n, giving the symmetric quotient q and the remainder r. Values are signed.
 
