@@ -1,5 +1,22 @@
 \ forth2012 compatibility stuff
 
+code 2over ( a b c d -- a b c d a b )
+dex,
+msb 4 + lda,x msb sta,x
+lsb 4 + lda,x lsb sta,x
+dex,
+msb 4 + lda,x msb sta,x
+lsb 4 + lda,x lsb sta,x ;code
+code 2swap ( a b c d -- c d a b )
+lsb lda,x lsb 2+ ldy,x
+lsb sty,x lsb 2+ sta,x
+msb lda,x msb 2+ ldy,x
+msb sty,x msb 2+ sta,x
+lsb 1+ lda,x lsb 3 + ldy,x
+lsb 1+ sty,x lsb 3 + sta,x
+msb 1+ lda,x msb 3 + ldy,x
+msb 1+ sty,x msb 3 + sta,x ;code
+
 : environment? 2drop 0 ;
 : cells 2* ;
 : cell+ 2+ ;
