@@ -310,6 +310,7 @@ v1.6.1
  * forth: evaluate failed for strings that ended at page boundary
  * forth: print error in case include fails
  * forth: space optimize of
+ * forth: moved 2over, 2swap to compat
  * cart: made cartridge boot faster
  * cart: use Simons' Basic cart type to make $a000-$bfff RAM
  * editor: starting without filename now doesn't read from disk
